--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ping-plotter-desktop",
   "productName": "Ping Plotter",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "For Plotting Pings On A Chart",
   "main": "src/main.js",
   "scripts": {
@@ -11,6 +11,7 @@
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\""
   },
+  "repository": "https://github.com/skiingish/ping-plotter-desktop",
   "keywords": [],
   "author": {
     "name": "Sean",
@@ -20,6 +21,18 @@
   "config": {
     "forge": {
       "packagerConfig": {},
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-github",
+          "config": {
+            "repository": {
+              "owner": "me",
+              "name": "awesome-thing"
+            },
+            "prerelease": true
+          }
+        }
+      ],
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
@@ -47,13 +60,15 @@
   "dependencies": {
     "chart.js": "^3.7.0",
     "electron-squirrel-startup": "^1.0.0",
-    "ping": "^0.4.1"
+    "ping": "^0.4.1",
+    "update-electron-app": "^2.0.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.61",
     "@electron-forge/maker-deb": "^6.0.0-beta.61",
     "@electron-forge/maker-rpm": "^6.0.0-beta.61",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
+    "@electron-forge/publisher-github": "6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
     "electron": "16.0.6"
   }
